# cargo-upgrade

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
src/: app.rs  cli.rs  dependency.rs  grouped_checklist.rs  main.rs  manifest.rs  progress.rs  registry.rs  update.rs  versioning.rs
