[package]
authors = ["Clover You <hi@clovu.me>"]
categories = [
  "development-tools::cargo-plugins",
  "command-line-utilities",
  "command-line-interface",
]
description = "A Cargo subcommand inspired by pnpm upgrade for refreshing dependency requirements in Cargo.toml."
edition = "2024"
exclude = [
  "/.DS_Store",
  "/.editorconfig",
  "/.github/",
  "/.gitignore",
  "/.vscode/",
  "/target/",
]
keywords = ["cargo", "upgrade", "update", "crate", "dependency", "version"]
license = "MIT"
name = "cargo-upgrade"
readme = "README.md"
repository = "https://github.com/clovu/cargo-upgrade"
version = "0.0.1"

[dependencies]
cargo_toml = "0.22.3"
clap = { version = "4.6.1", features = ["derive"] }
crates_io_api = "0.12.0"
futures = "0.3.32"
semver = "1.0.28"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
toml_edit = "0.25.10"
